LLM: UI Polish (Suggestion Chips) and Final Cleanup

--- a/static/index.html
+++ b/static/index.html
@@ -66,6 +66,12 @@
             </div>
 
             <div class="input-area">
+                <div class="suggestion-chips">
+                    <button class="chip">💰 Total Revenue</button>
+                    <button class="chip">📉 Capital Expenditure</button>
+                    <button class="chip">📊 Net Profit Margin</button>
+                    <button class="chip">📅 Revenue FY2022</button>
+                </div>
                 <div class="input-wrapper">
                     <textarea id="queryInput" placeholder="Ask about revenue, capex, or margins..." rows="1"></textarea>
                     <button id="sendBtn" class="send-btn">
