Cleanup: Remove temporary logging and test scripts

--- a/static/index.html
+++ b/static/index.html
@@ -47,8 +47,8 @@
         <main class="chat-area">
             <header class="chat-header">
                 <div>
-                    <h2>Financial Intelligence</h2>
-                    <p>Ask about Revenue, Strategy, or Risks</p>
+                    <h2>Financial Data Explorer</h2>
+                    <p>Ask about Revenue, Profit, Assets, and Ratios</p>
                 </div>
                 <div>
                     <!-- Optional: Model Toggle or Options -->
@@ -60,10 +60,16 @@
                 <div class="message ai">
                     <div class="avatar">AI</div>
                     <div class="bubble">
-                        Hello! I'm your Financial Analyst assistant. Any company you ingest, I can analyze. Try asking:
+                        Hello! I'm your Financial Analyst assistant. I can retrieve <strong>exact numbers</strong> from
+                        Income Statements, Balance Sheets, and Cash Flows.
+                        <br><br>
+                        Try asking:
                         <ul>
-                            <li>"What is the revenue for INFY.NS?" (Numeric)</li>
+                            <li>"What is the <strong>Revenue</strong> for INFY.NS?"</li>
+                            <li>"Show me the <strong>Net Profit</strong>."</li>
+                            <li>"What are the <strong>Total Assets</strong>?"</li>
                         </ul>
+                        <em>Note: Textual analysis (Risks, Strategy) is currently disabled.</em>
                     </div>
                 </div>
             </div>
